--- a/app/app.html
+++ b/app/app.html
@@ -22,6 +22,9 @@
         <p class="subtitle">
             You are in <strong id="env-name"></strong> environment.
         </p>
+        <p class="subtitle">
+            This is version 0.0.5
+        </p>
     </div>
 
 </body>
